Grace/tests/gibbs/errors/t152.grace
// ERROR = P1018
{x : -> 1}
